fix: media query
not responsive on phone and trying to fix

--- a/resources/css/large-screen.css
+++ b/resources/css/large-screen.css
@@ -1,4 +1,4 @@
-@media(min-width:768px) {
+@media only screen (min-width:768px) {
 
     .main-container {
         display: grid;
